# guardsql-agent

./: CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  README.md  TEST_QUERIES.md  complete_setup.sql  docker-compose.yml  init_db.sql  pyproject.toml  requirements.txt  setup.sh
backend/: main.py
backend/api/: auth.py  routes.py  schemas.py
backend/core/: config.py  exceptions.py  logging.py
backend/db/: connection.py
backend/services/: executor.py  llm.py  query_service.py  validator.py
frontend/: .env.example
frontend/.streamlit/: config.toml
frontend/src/: api_service.py  app.py  config.py
tests/: test_integration.py  test_validator.py
